@@ -1,0 +1,14 @@
+package Ex6;
+
+1;
+
+__END__
+
+=pod
+
+=head1 LICENSE
+
+ © 2013 Michal Josef Špaček
+ BSD 2-Clause License
+
+=cut
